add plugin score api
