# api/plugin/v1alpha1/plugin.pb.validate.go
@@ -587,3 +587,138 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = CreatePluginRequestValidationError{}
+
+// Validate checks the field values on CreatePluginScoreRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *CreatePluginScoreRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on CreatePluginScoreRequest with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// CreatePluginScoreRequestMultiError, or nil if none found.
+func (m *CreatePluginScoreRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *CreatePluginScoreRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if m.GetPluginId() <= 0 {
+		err := CreatePluginScoreRequestValidationError{
+			field:  "PluginId",
+			reason: "value must be greater than 0",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if val := m.GetScore(); val < 0 || val > 5 {
+		err := CreatePluginScoreRequestValidationError{
+			field:  "Score",
+			reason: "value must be inside range [0, 5]",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if utf8.RuneCountInString(m.GetComments()) < 0 {
+		err := CreatePluginScoreRequestValidationError{
+			field:  "Comments",
+			reason: "value length must be at least 0 runes",
+		}
+		if !all {
+			return err
+		}
+		errors = append(errors, err)
+	}
+
+	if len(errors) > 0 {
+		return CreatePluginScoreRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// CreatePluginScoreRequestMultiError is an error wrapping multiple validation
+// errors returned by CreatePluginScoreRequest.ValidateAll() if the designated
+// constraints aren't met.
+type CreatePluginScoreRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m CreatePluginScoreRequestMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m CreatePluginScoreRequestMultiError) AllErrors() []error { return m }
+
+// CreatePluginScoreRequestValidationError is the validation error returned by
+// CreatePluginScoreRequest.Validate if the designated constraints aren't met.
+type CreatePluginScoreRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e CreatePluginScoreRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e CreatePluginScoreRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e CreatePluginScoreRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e CreatePluginScoreRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e CreatePluginScoreRequestValidationError) ErrorName() string {
+	return "CreatePluginScoreRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e CreatePluginScoreRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sCreatePluginScoreRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = CreatePluginScoreRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = CreatePluginScoreRequestValidationError{}
